--- a/style.css
+++ b/style.css
@@ -192,3 +192,28 @@ html, body {
     background-image: url(assets/FooterGradient.png);
     background-position-x: repeat;
 }
+
+#contact-box {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: white;
+    border:black 2px solid;
+    margin:0 auto;
+    height: 500px;
+    width:400px;
+    margin-top:80px;
+}
+
+.header-contact {
+    display: inline-block;
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.content-box {
+    display: block;
+    float:left;
+    text-align: left;
+}
