--- a/style.css
+++ b/style.css
@@ -154,6 +154,16 @@ a:hover {
 
 }
 
+.aboutMeBack {
+    margin:0;
+    padding:0;
+    width: 100%;
+    height: 100%;
+    position: relative;
+    background-image: url("assets/BackgroundPattern.png");
+    background-repeat: repeat;
+}
+
 .frilly {
     margin:0;
     padding:0;
@@ -273,4 +283,49 @@ a:hover {
 .aboutImage {
     width: 18vh;
     height: auto;
+}
+
+.mainHeadPage {
+    position:fixed;
+    top: 0;
+    margin-top: 59px;
+    left: 0;
+}
+
+.mainImage {
+    width: 12vh;
+    height: auto;
+}
+
+#aboutme-info {
+    display: inline-block;
+    margin-top: 73px;
+    text-align: center;
+}
+
+.aboutMeDetails {
+    margin-bottom: 5px;
+    width: 100%;
+    border: black 4px solid;
+    background-color: rgb(206, 255, 149);
+    text-align: center;
+}
+
+.aboutMeTitle {
+    margin-top: 5px;
+}
+
+.imageBlock {
+    display: block;
+    right:0px;
+    width: 100%;
+}
+
+.selfImage {
+    max-width: 100%;
+    height:auto;
+}
+
+html {
+    height: 100%;
 }
